--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,3 +20,7 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
+    - name: Run tests 32bit
+      run: cargo test --target i686-unknown-linux-musl
+    - name: Clippy
+      run: cargo clippy --verbose
