--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        toolchain: ["stable", "beta", "nightly", "1.57.0"]
+        toolchain: ["stable"]
 
     steps:
     - uses: actions/checkout@v4
