--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -25,6 +25,10 @@ jobs:
       with:
         toolchain: ${{ matrix.toolchain }}
 
+    - name: Install 32bit target
+      run: rustup target add i686-unknown-linux-musl
+
+
     - name: Build
       run: cargo build --verbose
     - name: Run tests
