--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -35,3 +35,5 @@ jobs:
       run: cargo test --verbose ${{ matrix.target }}
     - name: Clippy
       run: cargo clippy --verbose ${{ matrix.target }}
+    - name: Miri
+      run: cargo +nightly miri test --verbose ${{ matrix.target }}
