--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,7 +16,6 @@ jobs:
     strategy:
       matrix:
         toolchain: ["stable"]
-        target: ["", "--target i686-unknown-linux-musl", "--target wasm32v1-none"]
 
     steps:
     - uses: actions/checkout@v4
@@ -28,18 +27,32 @@ jobs:
 
     - name: Install 32bit target
       run: rustup target add i686-unknown-linux-musl
+    - name: Install wasm target
+      run: rustup target add wasm32v1-none
     - name: Install miri
       run: rustup component add --toolchain nightly-x86_64-unknown-linux-gnu miri
     - name: Install no-std-check
       run: cargo install cargo-no-std-check
       
     - name: Build
-      run: cargo build --verbose ${{ matrix.target }}
+      run: cargo build --verbose
+    - name: Build-32bit
+      run: cargo build --verbose --target i686-unknown-linux-musl
+    - name: Build-wasm
+      run: cargo build --verbose --target wasm32v1-none
+
     - name: Test
-      run: cargo test --verbose ${{ matrix.target }}
+      run: cargo test --verbose
+    - name: Test-32bit
+      run: cargo test --verbose --target i686-unknown-linux-musl
+    - name: Check-wasm
+      run: cargo check --verbose --target wasm32v1-none
+
     - name: Clippy
-      run: cargo clippy --verbose ${{ matrix.target }}
+      run: cargo clippy --verbose
+
     - name: Miri
-      run: cargo +nightly miri test --verbose ${{ matrix.target }}
+      run: cargo +nightly miri test --verbose
+
     - name: NoStd
       run: cargo no-std-check
