--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,10 @@ name = "orx-self-or"
 version = "1.2.0"
 edition = "2024"
 authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
+readme = "README.md"
 description = "Defines SoR (self-or-ref) and SoM (self-or-mut) traits that are useful in reducing code duplication and pushing forward the ownership transfer decision from the type designer to the consumer."
 license = "MIT OR Apache-2.0"
+homepage = "https://github.com/orxfun/orx-self-or/"
 repository = "https://github.com/orxfun/orx-self-or/"
 keywords = ["self", "mut", "owned", "polymorphic", "pointer"]
 categories = ["data-structures", "rust-patterns", "no-std"]
